updated css for to avoid horizontal scroll and centering nav links

--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -154,6 +154,14 @@ nav li.active a {
     font-size: 44px;
   }
 
+  body {
+    max-width: 100%;
+    overflow-x: hidden;
+  }
+
+  nav ul {
+    margin-left: 50px;
+  }
   .content {
     text-align: center;
     padding: 0;
